completed swagger API doc
