# back-end/server/controllers/update-entry.js
@@ -1,14 +1,19 @@
 export default function makePostEntry({ updateEntry }) {
     return async function sendResponse(httpRequest) {
         try {
-            const { source = {}, userToken, card } = httpRequest.body
-            // console.log(userToken)
+            const { source = {}, card } = httpRequest.body
             source.ip = httpRequest.ip
             source.browser = httpRequest.headers['User-Agent']
             if (httpRequest.headers['Referer']) {
                 source.referrer = httpRequest.headers['Referer']
             }
-
+            const userToken = httpRequest.query.userToken
+            if (!userToken) {
+                throw new Error('User token is required')
+            }
+            if (!userToken) {
+                throw new Error('Card data is required')
+            }
             const entries = await updateEntry(userToken, card)
 
             return {
